<resources>
    <string name="app_name">Keyper</string>
    <string name="menu_disconnect_button">Se déconnecter</string>
    <string name="menu_credits_button">À propos</string>
    <string name="app_credits">Application créée par SELLÉ-FABRE Inc.\nTous droits réservés</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="sign_up_prompt">Vous vous êtes bien inscrit</string>
    <string name="username_hint">Identifiant</string>
    <string name="password_hint">Mot de passe</string>
    <string name="disconnect_prompt">Vous êtes bien déconnecté</string>
    <string name="password_length">Taille du mot de passe</string>
    <string name="clipboard_copy">Le Mot de passe a bien été copié dans le Presse-papiers</string>
    <string name="password_title_hint">Libellé</string>
    <string name="password_confirm_hint">Confirmation du mot de passe</string>
    <string name="validate_button">Valider</string>
    <string name="cancel_button">Annuler</string>
    <string name="passwords_not_matching">Les mots de passe ne correspondent pas</string>
    <string name="password_missing">Veuillez renseigner un mot de passe</string>
    <string name="password_confirm_missing">Veuillez confirmer votre mot de passe</string>
    <string name="username_missing">Veuillez renseigner un identifiant</string>
    <string name="username_already_exists">Ce nom d\'utilisateur existe déjà</string>
    <string name="incorrect_username">Vous n\'etes pas inscrit | Mauvais identifiant</string>
    <string name="incorrect_password">Mot de passe incorrect</string>
    <string name="add_title">Ajouter un mot de passe</string>
    <string name="delete_prompt">Le mot de passe a été supprimé</string>
    <string name="edit_title">Modifier le mot de passe</string>
    <string name="search">Rechercher</string>
    <string name="delete_dialog_title">Suppression</string>
    <string name="delete_dialog_text">Êtes-vous sûr de vouloir supprimer ce mot de passe ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="password_too_long">Un mot de passe de doit pas faire plus de 50 caractères</string>
    <string name="special_characters">Caractères spéciaux ?</string>
</resources>
